src/snapshot_middleware/snapshots/librojo__snapshot_middleware__toml__test__with_metadata.snap
---
source: src/snapshot_middleware/toml.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  instigating_source:
    Path: foo.toml
  relevant_paths:
    - foo.toml
    - foo.meta.json5
  context: {}
  specified_id: manually specified
  middleware: ~
  schema: ~
name: foo
class_name: ModuleScript
properties:
  Source:
    String: "return {\n\tarray = {1, 2, 3},\n\tbool = false,\n\tint = 123,\n}"
children: []
